/*
Protobuf definition for the graph Statistics.
During the loading some statistics are collected about the graph.
They can be useful for the translator to generate better Join Trees.
@author: Matteo Cossu
*/

syntax = "proto3";

message TableStats {
    string name = 1;
    int32 size = 2; // number of elements
    bool isComplex = 3; // if for the same subject exist more values
    int32 distinctSubjects = 4; // distinct subjects in that table
    bool isInverseComplex = 5;
}

message Graph {
    string name = 1;
    repeated TableStats tables = 2; 
    repeated CharacteristicSet CharacteristicSets = 3;
}

message CharacteristicSet {
    repeated string predicates = 1; // all the predicates part of this char set
    int32 subjectsCount = 2; // count of all subjects part of this char set
    map<string, int32> triplesPerPredicate = 3; // key -> predicate, value -> count of all triples that has this predicate
}

